--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node devServer",
-    "production": "webpack"
+    "production": "webpack --config webpack.config.pro.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,7 @@
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
     "happypack": "^5.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
